JumpScript/tests/baselines/reference/collisionSuperAndParameter1.errors.txt
tests/cases/compiler/collisionSuperAndParameter1.jump(6,23): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.


==== tests/cases/compiler/collisionSuperAndParameter1.jump (1 errors) ====
    class Foo {
    }
    
    class Foo2 extends Foo {
        x() {
            var lambda = (_super: number) => { // Error 
                          ~~~~~~~~~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
        }
    }